Fixed alignment issues on front page, thx "C"

--- a/styles.css
+++ b/styles.css
@@ -385,8 +385,8 @@ audio {
 }
 
 .cover-graphic {
-    width: 80vh;
-    height: 60vh;
+    width: 60vh;
+    height: 45vh;
     max-width: 60vw;
     max-height: 45vw;
 
@@ -398,15 +398,18 @@ audio {
 }
 
 .cover-arrow {
-    position: relative;
+    position: absolute;
 
-    top: -10px;
+    padding: 10px 10px 15px;
+
+    bottom: 40px;
+    left: calc(50% - 50px);
+
     
     text-align: center;
     
     margin: 0px;
     height: 100px;
-    min-height: 30px;
     width: 100px;
 
     animation: bounce 2s infinite;
